implemented FAQ and Testimonials sections

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -426,4 +426,8 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .section-layout {
+    @apply flex flex-col gap-y-10 md:gap-y-12 lg:gap-y-16 py-12 px-4 md:py-16 md:px-8 lg:py-20 lg:px-24
+  }
 }
